Fixed todo-item overflowing

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
 
 main {
   background-color: #fff;
+  min-width: 550px;
+  max-width: 550px;
   padding: 16px 25px;
   border-radius: 8px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -83,7 +85,7 @@ ul {
 
 ul li {
   display: grid;
-  grid-template-columns: 15px 1fr 1fr 20px;
+  grid-template-columns: 15px 30fr 1fr 20px;
   row-gap: 7px;
   align-items: center;
 }
@@ -101,7 +103,10 @@ ul li {
 }
 
 .todo-item {
-  padding-left: 10px;
+  padding-left: 5px;
+  overflow: hidden; /* Hide overflow content */
+  text-overflow: ellipsis;
+  white-space: nowrap; /* Prevent text from wrapping */
 }
 
 .todo-item-done {
